--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@mantine/notifications": "^7.1.5",
     "@mantine/nprogress": "^7.1.5",
     "@mantine/tiptap": "^7.1.5",
+    "@react-spring/web": "^9.7.3",
     "@tabler/icons-react": "^2.39.0",
     "@tiptap/extension-link": "^2.1.12",
     "@tiptap/react": "^2.1.12",
