--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tiptap/starter-kit": "^2.1.12",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0-rc14",
+    "framer-motion": "^10.16.4",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
