Adição de login

--- a/package.json
+++ b/package.json
@@ -24,9 +24,12 @@
     "@tiptap/extension-link": "^2.1.12",
     "@tiptap/react": "^2.1.12",
     "@tiptap/starter-kit": "^2.1.12",
+    "cookie": "^0.5.0",
     "dayjs": "^1.11.10",
     "embla-carousel-react": "^8.0.0-rc14",
     "framer-motion": "^10.16.4",
+    "jotai": "^2.5.0",
+    "js-cookie": "^3.0.5",
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
@@ -34,6 +37,8 @@
   },
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
+    "@types/cookie": "^0.5.3",
+    "@types/js-cookie": "^3.0.5",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
