--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mantine/modals": "^7.1.7",
     "@mantine/notifications": "^7.1.5",
     "@mantine/nprogress": "^7.1.5",
+    "@react-pdf/renderer": "^3.1.14",
     "@react-spring/web": "^9.7.3",
     "@tabler/icons-react": "^2.39.0",
     "dayjs": "^1.11.10",
@@ -26,7 +27,8 @@
     "next": "13.5.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-imask": "^7.1.3"
+    "react-imask": "^7.1.3",
+    "react-to-print": "^2.14.15"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.2.0",
